# nirj-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: run-agent.ps1  run-agent.sh
src/nirj_agent/cli/: main.py
src/nirj_agent/config/: __init__.py  models.py  store.py
src/nirj_agent/manifests/: __init__.py  github.py  models.py  parser.py
src/nirj_agent/providers/: __init__.py  apt.py
src/nirj_agent/services/: __init__.py  apply.py  boot.py  desktop.py  desktop_setup.py  desktop_shortcuts.py  manifest.py  overlay.py  plan.py  reconciliation.py  runner.py  update.py  wallpaper.py  wallpaper_session.py  windows.py
src/nirj_agent/state/: __init__.py  models.py  store.py
src/nirj_agent/storage/: __init__.py  files.py  json.py  lock.py  paths.py  yaml.py
src/nirj_agent/update/: __init__.py  models.py  store.py
tests/: test_cli.py  test_cli_apply.py  test_cli_manifest.py  test_cli_plan.py  test_config.py  test_manifest.py  test_paths.py  test_state.py  test_update_state.py  test_yaml_store.py
tests/manifests/: test_github.py  test_parser.py
tests/providers/: test_apt.py
tests/services/: test_apply.py  test_boot.py  test_desktop.py  test_desktop_setup.py  test_desktop_shortcuts.py  test_manifest.py  test_overlay.py  test_plan.py  test_reconciliation.py  test_runner.py  test_update.py  test_wallpaper.py  test_wallpaper_session.py  test_windows.py
tests/storage/: test_files.py  test_lock.py
