[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nirj-agent"
version = "0.1.0"
description = "Device management agent for Northern Ireland Raspberry Jam"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=11.0,<12",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
nirj-agent = "nirj_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
